--- a/css/style.css
+++ b/css/style.css
@@ -12,26 +12,286 @@ a {
 h1 {
     font-size: 80px;
     font-weight: 600;
+    letter-spacing: -2.5px;
     color: #192b59;
+    line-height: 1.1;
+    max-width: 600px;
+    margin-bottom: 65px;
+}
+
+.title-h2 {
+    font-size: 50px;
+    font-weight: 600;
+    color: #192b59;
+    line-height: 1.2;
+    letter-spacing: -1.5px;
+    
+}
+
+.title-h2 span {
+    display: block;
+    font-size: 16px;
+    font-weight: 800;
+    color: #1085e4;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    margin-bottom: 14px;
+}
+
+.title-40 {
+    font-size: 40px;
+    letter-spacing: -1.1px;
+    font-weight: 600;
+    color: #192b59;
+    line-height: 1.2;    
+}
+
+.title-40 span {
+    display: block;
+    font-size: 18px;
+    margin-bottom: 20px;
+    letter-spacing: 3.5px;
+    font-weight: 800;
+    color: #1085e4;
+    text-transform: uppercase;
+}
+
+.page-stat .title-h2, .page-screen .title-h2 {
+    text-align: center;
+    margin: 0 auto;
+}
+
+.page-stat .title-h2 {
+    max-width: 500px;
+}
+
+.page-subscribe .title-h2 {
+    color: #fff;
+    margin-top: 0;
+    margin-bottom: 25px;
+}
+.page-subscribe  .title-h2 span {
+    font-size: 14px;
+}
+
+.wrap {
+    max-width: 1110px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.box-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 305px;
+}
+
+.logo {
+    display: block;
+    width: 181px;
+    height: 49px;
+    background-image: url(../img/logo.png);
 }
 
 .nav {
     font-size: 12px;
     font-weight: 700;
-    color: #6e7ea9;
     text-transform: uppercase;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
 }
 
-.btn-free {
+.nav>li {
+    padding: 0 20px;
+}
+
+.nav>li:last-child {
+    padding-right: 0;
+}
+
+.nav-item {
+    color: #6e7ea9;
+    letter-spacing: 2px;
+}
+
+.screen-img {
+    display: block;
+    background-image: url(../img/header-screen.png);
+    background-repeat: no-repeat;
+    width: 895px;
+    height: 740px;
+    position: absolute;
+    right: 0;
+    top: 189px;
+}
+
+.btn-primary {
     color: #fff;
-    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 2.5px;
+    font-weight: 700;
+    text-transform: uppercase;
     background-color: #1085e4;
+    border: 1px solid #1085e4;
+    padding: 20px 40px;
+    border-radius: 30px;
+    transition: 0.3s;
+}
+.btn-primary:hover {
+    color: #1085e4;
+    background-color: transparent;
+    }
+
+.btn-secondary {
+    color: #7e8bae;
+    font-size: 12px;
+    letter-spacing: 2.5px;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: #cbdbe8;
+    border: 1px solid #cbdbe8;
+    padding: 20px 40px;
+    border-radius: 30px;
+    transition: 0.3s;
+}
+
+.btn-secondary:hover {
+    background-color: #fff;
+    }
+
+.btn-free {
+    font-weight: 400;
+    padding: 21px 56px;
+    letter-spacing: 1.7px;
+}
+
+.btn-info {
+    color: #8085b1;
+    font-size: 12px;
+    letter-spacing: 2.5px;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: transparent;
+    border: 1px solid #dce1e5;
+    padding: 20px 40px;
+    border-radius: 30px;
+    transition: 0.3s;
+}
+
+.btn-info:hover {
+    color:#fff;
+    background-color: #94b4cc;
+    border: 1px solid #94b4cc;
+}
+
+.btn-group a + a {
+    margin-left: 15px;
+}
+
+.list-company {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1110px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.list-company-item {
+    display: block;
+}
+
+.company-one {
+    background-image: url(../img/token.png);
+    flex-basis: 198px;
+    height: 58px;
+}
+
+.company-two {
+    background-image: url(../img/magneto.png);
+    flex-basis: 200px;
+    height: 69px;
+}
+
+.company-three {
+    background-image: url(../img/boohoo.png);
+    flex-basis: 201px;
+    height: 47px;
+}
+
+.company-four {
+    background-image: url(../img/fractal.png);
+    flex-basis: 200px;
+    height: 69px;
+}
+
+.grid {
+    display: grid;
+    grid-template-areas: "a b c" "d b c" "d f g" "e f g" "e h h";
+    grid-gap: 35px;
+    grid-template-columns: 1fr 1fr 1fr;
+    max-width: 1110px;
+    margin: 0 auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.grid-title {
+    grid-area: a;
+}
+
+.grid-item-1 {
+    grid-area: b;
+}
+
+.grid-item-2 {
+    grid-area: c;
+}
+
+.grid-item-3 {
+    grid-area: d;
+}
+
+.grid-item-4 {
+    grid-area: e;
+}
+
+.grid-item-5 {
+    grid-area: f;
+}
+
+.grid-item-6 {
+    grid-area: g;
+}
+
+.grid-text {
+    grid-area: h;
+    padding: 0 14px;
+}
+
+.grid-name {
+    font-size: 14px;
+    color:#1085e4;
+}
+.grid-name span{
+    font-size: 16px;
+    font-weight: 700;
+    color:#192b59;
 }
 
 .grid h2 {
     font-size: 40px;
     color: #192b59;
     font-weight: 700;
+    margin-top: 0;
 }
 
 .grid h2 span {
@@ -40,14 +300,322 @@ h1 {
     display: block;
 }
 
+.grid-item {
+    text-align: center;
+    border-radius: 10px;
+    box-shadow: 0 9px 20px #f4f4f4;
+    padding: 40px 29px 64px;
+}
+
 .grid-item h3 {
     font-size: 20px;
     font-weight: 600;
     color: #192b59;
+    margin-bottom: 18px;
 }
 
 .grid-item a {
     font-size: 14px;
     font-weight: 600;
     color: #1085e4;
+}
+
+.grid-icon {
+    background-repeat: no-repeat;
+    display: block;
+    height: 92px;
+    margin: 0 auto 21px;
+    background-position: center;
+}
+
+.grid-icon-1 {
+    background-image: url(../img/icon-WD.png);
+    background-size: 73px 79px;
+}
+.grid-icon-2 {
+    background-image: url(../img/icon-HC.png);
+    background-size: 89px 85px;
+}
+
+.grid-icon-3 {
+    background-image: url(../img/icon-MFD.png);
+    background-size: 79px 82px;
+}
+
+.grid-icon-4 {
+    background-image: url(../img/icon-ETE.png);
+    background-size: 109px 92px;
+}
+
+.grid-icon-5 {
+    background-image: url(../img/icon-RD.png);
+    background-size: 85px 90px;
+}
+
+.grid-icon-6 {
+    background-image: url(../img/icon-24-7-OS.png);
+    background-size: 100px 87px;
+}
+
+.software-pic {
+    display: block;
+    width: 48%;
+    height: 986px;
+    background-image: url(../img/software-pic.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    position: absolute;
+    left: -2%;
+    bottom: -39px;
+    z-index: -1;
+}
+
+.settings-icon {
+    display: block;
+    background-image: url(../img/software-icon.png);
+    background-repeat: no-repeat;
+    background-position: -28px 0;
+    width: 117px;
+    height: 98px;
+}
+
+.page-software-flex {
+    display: flex;
+    justify-content: flex-end;
+}
+.page-software-flex>div {
+    flex-basis: 55%;
+}
+.page-software .title-h2, .page-analytics .title-h2, .page-control .title-h2 {
+    max-width: 560px;
+    margin-top: 12px;
+    margin-bottom: 26px;
+}
+.page-software-list {
+    margin-top: 30px;
+    height: 323px;
+    overflow: hidden;
+    overflow-y: scroll;
+}
+.page-software-list::-webkit-scrollbar { width: 4px; height: 4px;}
+.page-software-list::-webkit-scrollbar-button {  background-color: #1085e4; }
+.page-software-list::-webkit-scrollbar-track-piece { background-color: #f3f6ff;}
+.page-software-list::-webkit-scrollbar-thumb { height: 50px; background-color: #1085e4; border-radius: 10px;}
+
+.page-software-list dt {
+    font-weight: 700;
+    color:#5a6789;
+    margin-bottom: 9px;
+}
+
+.page-software-list dd {
+    margin-left: 0;
+    margin-bottom: 50px;
+    font-size: 14px;
+    line-height: 1.75;
+    padding-right: 20px;
+}
+
+.list-stat {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    margin-top: 76px;
+    padding: 0;
+    flex-wrap: wrap;
+}
+
+.list-stat>li {
+    font-size: 12px;
+    font-weight: 700;
+    color: #1085e4;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 2.7px;
+}
+
+.list-stat>li>span {
+    display: block;
+    font-size: 60px;
+    color: #bacbdc;
+    margin-bottom: 23px;
+    letter-spacing: 0;
+}
+
+.screen {
+    margin-top: 36px;
+    margin-bottom: -7px;
+    width: 100%;
+    max-width: 1288px;
+}
+
+.box-price {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 83px;
+}
+
+.box-price .btn-primary {
+    padding: 20px 60px;
+}
+
+.box-price-item {
+    background-color: #f5faff;
+    flex-basis: 32%;
+    position: relative;
+    padding: 90px 0 96px 0;
+}
+
+.box-price-item h3 {
+    color: #000958;
+    font-size: 70px;
+    letter-spacing: -1px;
+    margin-top: 0;
+    margin-bottom: 17px;
+}
+.box-price-item h3 span {
+    font-size: 20px;
+}
+
+.box-price-item p {
+    font-size: 14px;
+    color: #0084ff;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+.box-price-item:first-child h3 {
+    margin-bottom: 35px;
+}
+
+.box-price-item h3 span:first-child {
+    color: #000958;
+}
+.box-price-item h3 span:last-child {
+    color: #7b8ab2;
+}
+.box-price-item.active {
+    background-color: #192b59;
+    color: #fff;
+}
+.box-price-item.active h3 {
+    color: #fff;
+}
+.box-price-item.active h3 span:first-child {
+    color: #fff;
+}
+
+.box-price-item ul {
+    list-style-type: none;
+    padding-left: 0;
+    margin-top: 36px;
+    margin-bottom: 63px;
+    font-size: 14px;
+}
+
+.box-price-item ul>li {
+    margin-bottom: 14px;
+}
+.box-price-item::after {
+    content: "";
+    width: 58px;
+    height: 100%;
+}
+.box-price-item.active::after {
+    display: none;
+}
+
+.box-subscribe {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.box-subscribe-text {
+    color: #dfe8ff;
+    font-size: 18px;
+    max-width: 437px;
+}
+
+.box-subscribe-user {
+    position: relative;
+}
+
+.box-subscribe-child {
+    flex-basis: 49%;
+}
+
+.box-subscribe-user input {
+    border: 2px solid #3f5cb1;
+    color: #fff;
+    font-size: 14px;
+    border-radius: 45px;
+    background-color: transparent;
+    padding: 25px 230px 25px 37px;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.box-subscribe-user .btn-primary {
+    position: absolute;
+    top: 9px;
+    right: 8px;
+    padding: 17px 50px;
+}
+
+.box-subscribe-user input:focus, .box-subscribe-user .btn-primary {
+    outline: none;
+}
+
+.box-subscribe-user input::-webkit-input-placeholder {color:#b1c3ee;}
+.box-subscribe-user input::-moz-placeholder          {color:#b1c3ee;}
+.box-subscribe-user input:-moz-placeholder           {color:#b1c3ee;}
+.box-subscribe-user input:-ms-input-placeholder      {color:#b1c3ee;}
+
+
+/* PAGE */
+
+.page-header {
+    background-image: url(../img/header-bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 53px 0 330px 0;
+    position: relative;
+}
+.page-company {
+    background-image: url(../img/Home.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 106px 0 99px;
+}
+
+.page-grid {
+    padding: 134px 0 118px 0;
+}
+
+.page-stat, .page-screen {
+    background-color: #edf6ff;
+}
+
+.page-stat {
+    padding: 116px 0 96px 0;
+    position: relative;
+}
+
+.page-plan, .page-screen {
+    text-align: center;
+}
+
+.page-screen {
+    padding: 116px 0 0 0;
+}
+
+.page-subscribe {
+    padding: 25px 0 28px 0;
+    color:#fff;
+    background: rgba(10,32,144,1);
+    background: -webkit-gradient(left top, right bottom, color-stop(0%, rgba(10,32,144,1)), color-stop(100%, rgba(35,120,205,1)));
+    background: linear-gradient(135deg, rgba(10,32,144,1) 0%, rgba(35,120,205,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0a2090', endColorstr='#2378cd', GradientType=1 );
 }
